# ndk-samples

hello-jniCallback/: README.md
hello-jniCallback/app/src/main/cpp/: CMakeLists.txt
native-plasma/app/src/main/cpp/: CMakeLists.txt  android_native_app_glue.c  plasma.c
teapots/classic-teapot/: build.gradle
teapots/classic-teapot/src/main/cpp/: CMakeLists.txt
teapots/common/ndk_helper/: JNIHelper.cpp  JNIHelper.h
teapots/more-teapots/: build.gradle
teapots/more-teapots/src/main/cpp/: CMakeLists.txt
wasm-native-plasma/app/src/main/cpp/: CMakeLists.txt  native-plasma_generated.c  native-plasma_generated.h
